--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <li><a href="index.html#Overview">Overview</a></li>
           <li><a href="index.html#faq">FAQ</a></li>
           <li><a href="index.html#contact">Contact</a></li>
+          <li><a href="./API.html">News</a></li>
 
       </ul>
   </nav><!-- .nav-menu -->
