--- a/Admin.html
+++ b/Admin.html
@@ -134,31 +134,16 @@
               <div class="row mb-3">
                 <label for="inputEmail3" class="col-sm-2 col-form-label">Duration:</label>
                 <div class="col-sm-10">
-                    <select class="form-select form-select" aria-label=".form-select example">
-                        <option selected>Select Days</option>
-                        <option value="1">14</option>
-                        <option value="2">15</option>
-                        <option value="3">16    </option>
-                      </select>
+                    <input type="text" class="form-control" placeholder="Enter Duration of the vaccine" aria-label="name" id="duration_vaccine">
                 </div>
               </div>
               <div class="row mb-3">
                 <label for="inputEmail3" class="col-sm-2 col-form-label">Recommended Age:</label>
                 <div class="col-sm-5">
-                    <select class="form-select form-select" aria-label=".form-select example">
-                        <option selected>Minimum Age</option>
-                        <option value="1">14</option>
-                        <option value="2">15</option>
-                        <option value="3">16    </option>
-                      </select> 
+                    <input type="text" class="form-control" placeholder="Enter minimum age" aria-label="name" id="Recommended_age_minimum">
                 </div>
                 <div class="col-sm-5">
-                    <select class="form-select form-select" aria-label=".form-select example">
-                        <option selected>Maximum Age</option>
-                        <option value="1">14</option>
-                        <option value="2">15</option>
-                        <option value="3">16    </option>
-                      </select>
+                    <input type="text" class="form-control" placeholder="Enter Maximum age" aria-label="name" id="Recommended_age_maximum">
                 </div>
               </div>
           </form>
