--- a/API.html
+++ b/API.html
@@ -106,7 +106,7 @@
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
-    <script src="./assets/js/API.js"></script>
+    <script src="./assets/js/api.js"></script>
 </body>
 
 </html>
