--- a/API.html
+++ b/API.html
@@ -50,6 +50,15 @@
   <div class="section-title" style="padding-top: 100px;">
     <h2>News</h2>
   </div>
+<!--Start of the search button-->
+<div class="container">
+    <form class="row gy-2 gx-2 align-items-center ml-4">
+      <div class="col-auto">
+        <label class="visually-hidden" id="search_query" for="autoSizingInputGroup">Search</label>
+        <div class="input-group">
+          <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Search News...">
+        </div>
+      </div>
 
     <!-- Start of API section -->
     <div id="posts">
