--- a/API.html
+++ b/API.html
@@ -59,6 +59,11 @@
           <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Search News...">
         </div>
       </div>
+      <div class="col-auto">
+        <button type="submit" id="search" class="btn btn-success">Search</button>
+      </div>
+    </form>
+  </div>
 
     <!-- Start of API section -->
     <div id="posts">
