--- a/workers.html
+++ b/workers.html
@@ -110,7 +110,7 @@
   <section id="why-us" class="why-us" style="padding: 0px;">
     <div class="container  counts p-2">
         <div class="section-title" style="padding: 0px;">
-            <h2>Hello (Worker Name)</h2>
+            <h2 class="headerGreet">Hello</h2>
           </div>
           <div class="popup-wrapper">
 
@@ -190,7 +190,7 @@
                 
             </div>
         </div>
-          <table class="table ">
+          <table class="table tasksTable">
             <thead>
               <tr>
                 <th scope="col">ID</th>
